tests/snapshots/examples_fixtures/optimizations__tail_recursion.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/optimizations/tail_recursion.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Type Mismatch

I found a type mismatch.

  examples/optimizations/tail_recursion.flx:41:5
   |
41 |     fibonacci_non_tail(n - 1) + fibonacci_non_tail(n - 2);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     ----------------------------------------------------- this expression has type `Unit and Unit`

   |     ----------------------------------------------------- operator operands are known at compile time

Note:
  expected type: matching '+' operands (Int+Int, Float+Float, or String+String)
  found type: Unit and Unit

Help:
  These two types are not compatible.
  adjust operand types or add explicit conversion
== stdout ==
<not executed>
